@@ -1,3 +1,9 @@
+2008-09-19  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-25-09
+	* add ErrorStreamFileWriter to SM configuration in
+	confdb.converter.OnlineConverter
+
 2008-09-18  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-25-08
